# enable-touch-id-sudo

./: Cargo.toml  README.md  net.stevenberg.enable-touch-id-sudo.plist
src/: main.rs
